// Copyright (C) 2019 Storj Labs, Inc.
// See LICENSE for copying information.

syntax = "proto3";
option go_package = "pb";

package contact;

import "node.proto";

service Contact {
    rpc PingNode(ContactPingRequest) returns (ContactPingResponse);
}

service Node {
    rpc CheckIn(CheckInRequest) returns (CheckInResponse);
}

message CheckInRequest {
    string address = 1;
    node.NodeVersion version = 2;
    node.NodeCapacity capacity = 3;
    node.NodeOperator operator = 4;
}

message CheckInResponse {
    bool ping_node_success = 1;
    string ping_error_message = 2;
}

message ContactPingRequest {}

message ContactPingResponse {}